--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.3.0",
     "@vuelidate/core": "^2.0.0",
     "@vuelidate/validators": "^2.0.0",
     "@vueuse/core": "^9.11.0",
@@ -15,11 +16,14 @@
     "firebase": "^9.15.0",
     "pinia": "^2.0.28",
     "vue": "^3.2.45",
-    "vue-router": "^4.1.6"
+    "vue-router": "^4.1.6",
+    "vuetify": "^3.1.4"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
+    "pug": "^3.0.2",
     "sass": "^1.58.0",
-    "vite": "^4.0.0"
+    "vite": "^4.0.0",
+    "vue-pug-plugin": "^2.0.3"
   }
 }
